--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,14 @@ typings/
 # dotenv environment variables file
 .env
 
+node_modules
+build
+.idea./build/
+.idea
+coverage
+coverage.json
+coverageEnv
+.node-xml*
+scTopics
+npm-debug.log
+.DS_Store
